[package]
name = "actix-cors"
version = "0.3.0-alpha.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Cross-origin resource sharing (CORS) for actix-web applications."
readme = "README.md"
keywords = ["cors", "web", "framework"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-extras.git"
documentation = "https://docs.rs/actix-cors/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_cors"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.0-beta.3"
actix-service = "1.0.6"
derive_more = "0.99.11"
futures-util = { version = "0.3.13", default-features = false }

[dev-dependencies]
actix-rt = "2.1.0"
