[package]
name = "actix-identity"
version = "0.3.0-alpha.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Identity service for actix-web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-identity/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_identity"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.0.0-beta.3", default-features = false, features = ["secure-cookies"] }
actix-service = "2.0.0-beta.4"
futures-util = { version = "0.3", default-features = false }
serde = "1.0"
serde_json = "1.0"
time = { version = "0.2", default-features = false, features = ["std"] }

[dev-dependencies]
actix-rt = "2.1"
actix-http = "3.0.0-beta.3"
bytes = "1.0"
