[package]
name = "actix-protobuf"
version = "0.5.1"
edition = "2018"
authors = ["kingxsp <jin.hb.zh@outlook.com>", "Yuki Okushi <huyuumi.dev@gmail.com>"]
description = "Protobuf support for actix-web framework."
readme = "README.md"
keywords = ["actix"]
homepage = "https://github.com/actix/actix-extras"
repository = "https://github.com/actix/actix-extras.git"
license = "MIT/Apache-2.0"
exclude = [".cargo/config", "/examples/**"]

[lib]
name = "actix_protobuf"
path = "src/lib.rs"

[dependencies]
bytes = "1.0.1"
futures = "0.3.13"
derive_more = "0.99.11"

actix-rt = "2.1.0"
actix-web = "4.0.0-beta.3"

prost = "0.7.0"

[dev-dependencies]
prost-derive = "0.7.0"
