[package]
name = "actix-redis"
version = "0.9.0-alpha.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Redis integration for actix framework"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "redis", "async", "actix", "tokio"]
homepage = "https://github.com/actix/actix-extras"
repository = "https://github.com/actix/actix-extras.git"
documentation = "https://docs.rs/actix-redis/"
categories = ["network-programming", "asynchronous"]
exclude = [".cargo/config"]
edition = "2018"

[lib]
name = "actix_redis"
path = "src/lib.rs"

[features]
default = ["web"]

# actix-web integration
web = ["actix-service", "actix-web", "actix-session/cookie-session", "rand", "serde", "serde_json"]

[dependencies]
actix = { version = "0.11.0-beta.2", features = [ "resolver" ] }
actix-utils = "2.0.0"

log = "0.4.14"
backoff = "0.3.0"
derive_more = "0.99.11"
futures = "0.3.13"
redis-async = "0.9.0"
actix-rt = "2.1.0"
time = "0.2.25"
tokio = "1.2.0"
tokio-util = "0.6.3"

# actix-session
actix-web = { version = "4.0.0-beta.3", optional = true }
actix-http = { version = "3.0.0-beta.3", optional = true }
actix-service = { version = "2.0.0-beta.4", optional = true }
actix-session = { path = "../actix-session", optional = true }
rand = { version = "0.8.3", optional = true }
serde = { version = "1.0.123", optional = true, features = ["derive"] }
serde_json = { version = "1.0.63", optional = true }

[dev-dependencies]
env_logger = "0.8.3"
serde_derive = "1.0.123"
serde_json = "1.0.63"
