[package]
name = "actix-session"
version = "0.4.0-alpha.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Session for actix-web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-session/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_session"
path = "src/lib.rs"

[features]
default = ["cookie-session"]

# sessions feature, session require "ring" crate and c compiler
cookie-session = ["actix-web/secure-cookies"]

[dependencies]
actix-web = "4.0.0-beta.3"
actix-service = "1.0.6"
bytes = "1.0.1"
derive_more = "0.99.11"
futures-util = { version = "0.3.13", default-features = false }
serde = "1.0.123"
serde_json = "1.0.63"
time = { version = "0.2.25", default-features = false, features = ["std"] }

[dev-dependencies]
actix-rt = "2.1.0"
