[package]
name = "actix-web-httpauth"
version = "0.4.1"
authors = ["svartalf <self@svartalf.info>", "Yuki Okushi <huyuumi.dev@gmail.com>"]
description = "HTTP authentication schemes for actix-web"
readme = "README.md"
keywords = ["http", "web", "framework"]
homepage = "https://github.com/actix/actix-extras"
repository = "https://github.com/actix/actix-extras.git"
documentation = "https://docs.rs/actix-web-httpauth/"
categories = ["web-programming::http-server"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_web_httpauth"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.0.0-beta.3", default_features = false }
actix-service = "2.0.0-beta.4"
futures = "0.3.13"
bytes = "1.0.1"
base64 = "0.13.0"

[dev-dependencies]
actix-rt = "2.1.0"

[features]
default = []
nightly = [] # leave it for compatibility

[badges]
maintenance = { status = "passively-maintained" }
