[package]
name = "prost-example"
version = "0.5.1"
edition = "2018"
authors = ["kingxsp <jin.hb.zh@outlook.com>", "Yuki Okushi <huyuumi.dev@gmail.com>"]

[dependencies]
bytes = "0.5"
env_logger = "*"

prost = "0.6.0"
prost-derive = "0.6.0"

actix-rt = "2.1.0"
actix-web = "4.0.0-beta.3"
actix-protobuf = { path="../../" }
